# semembed

./: Cargo.toml  Dockerfile  QUICKSTART.md  README.md  Taskfile.yml  docker-compose.yml
.github/workflows/: ci.yml
src/: main.rs
