[package]
name = "semembed"
version = "0.1.0"
edition = "2021"
authors = ["C360 Team"]
description = "Lightweight HTTP embedding service using fastembed-rs with OpenAI-compatible API"

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Embeddings (use latest version for Rust 1.85 compatibility)
fastembed = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bin]]
name = "semembed"
path = "src/main.rs"
